--- a/.config
+++ b/.config
@@ -3578,6 +3578,23 @@ CONFIG_PACKAGE_p910nd=m
 # CONFIG_PACKAGE_bmx7 is not set
 # CONFIG_PACKAGE_cjdns is not set
 # CONFIG_PACKAGE_cjdns-tests is not set
+CONFIG_PACKAGE_frr=m
+CONFIG_PACKAGE_frr-babeld=m
+CONFIG_PACKAGE_frr-bgpd=m
+CONFIG_PACKAGE_frr-eigrpd=m
+CONFIG_PACKAGE_frr-isisd=m
+CONFIG_PACKAGE_frr-ldpd=m
+CONFIG_PACKAGE_frr-libfrr=m
+CONFIG_PACKAGE_frr-nhrpd=m
+CONFIG_PACKAGE_frr-ospf6d=m
+CONFIG_PACKAGE_frr-ospfd=m
+CONFIG_PACKAGE_frr-pbrd=m
+CONFIG_PACKAGE_frr-pimd=m
+CONFIG_PACKAGE_frr-ripd=m
+CONFIG_PACKAGE_frr-ripngd=m
+CONFIG_PACKAGE_frr-vtysh=m
+CONFIG_PACKAGE_frr-watchfrr=m
+CONFIG_PACKAGE_frr-zebra=m
 # CONFIG_PACKAGE_genl is not set
 CONFIG_PACKAGE_igmpproxy=m
 CONFIG_PACKAGE_ip=m
